# appointment-scheduler

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  pyproject.toml.orig  pytest.ini
.github/actions/bumpversion/: action.yml
.github/workflows/: bumpversion.yml  main-ci.yml  pull-request-ci.yml
actions/bumpversion/: action.yml  bumpversion.yml
docker/: Dockerfile  entrypoint.sh
src/: main.py
src/core/: __version__.py  __version__.py.orig  common_path.py  configs.py  constants.py  logging_manager.py  utils.py
src/db/: __init__.py
src/dependencies/: __init__.py
src/resources/: app.property  app_config.yml
src/services/: __init__.py
src/services/models/: __init__.py  version.py
src/services/routers/: __init__.py  version.py
tests/src/: base_src_test.py
tests/src/core/: test_utils.py
tests/src/services/: test_version.py
tests/unit/: __init__.py  conftest.py
tests/unit/core/: __init__.py  test_logging_manager.py  test_utils.py
tests/unit/services/: test_version.py
