[tool.poetry]
name = "appoinment-scheduler"
version = "0.1.0"
description = "Appoinment Scheduller API PET project"
authors = ["Vasyl Boliuk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.5.5"
bandit = "^1.7.9"
commitizen = "^3.28.0"
git-changelog = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
