[tool.poetry]
name = "appoinment-scheduler"
version = "0.1.0"
description = "Appoinment Scheduller API PET project"
authors = ["Vasyl Boliuk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.5.5"
bandit = "^1.7.9"
commitizen = "^3.28.0"
git-changelog = "^2.5.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
assertpy = "^1.1"
allure-pytest = "^2.13.5"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
