[tool.poetry]
name = "appoinment-scheduler"
version = "0.2.0a2"
description = "Appoinment Scheduller API PET project"
authors = ["Vasyl Boliuk"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
colorlog = "^6.8.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.5.5"
bandit = "^1.7.9"
commitizen = "^3.28.0"
git-changelog = "^2.5.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
assertpy = "^1.1"
allure-pytest = "^2.13.5"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version="0.2.0a2"
version_files = [
    "src/core/__version__.py:VERSION",
    "pyproject.toml:^version"
]
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = false
major_version_zero = true
version_scheme="pep440"
prerelease_offset=1

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "E501",             # Add the `line-too-long` rule to the enforced rule set.
    "D",                # Add pydocstyle
    "I"                 # Add Isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=src --cov-report html --alluredir=allure-results"
